--- a/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/2024-12-13-how-to-install-app-psus..html
+++ b/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/2024-12-13-how-to-install-app-psus..html
@@ -13,31 +13,31 @@ image: https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App
 tags: SAS Beginner FAQ
 ---
 
-### Scope 
+<h3>Scope</h3> 
 This guide will walk you through the very very basics of installing an App via it's SAS Compliant APP PSU* in your MemoryCard.
 
-### What is an App PSU?
+<h3>What is an App PSU?</h3>
 Before beginning, you might ask yourself what is an APP PSU and why do we need it? For starters a PSU file is like a .zip file for the PS2, we can use it to pack stuff on the console. Much like zip files, if you package some files in a PSU they remain exactly in the same position after extraction. The reason this is useful is that we can package PS2 executables (or ELFs) along with other interesting stuff like icons and configuration into 1 easy to share and install file.
 
-### What makes a PSU 'SAS Compliant'?
-SAS is a new upcoming standard on the PS2 which aims to unify how apps work and interact with each other on the PS2. When we talk about a SAS Compliant PSU we mean a PSU which has the following:
-- A 'prefix' to denote what 'type' of Application is in the package. Example: `SYS` for System-Apps, `GME` for Games, `APP` for Standard executables.
-- A 3D icon with it's type indicators which shows up in the OSDSYS (PS2's Browser) with separate Copy and Delete icons for the respective action.
-- A `title.cfg` file which contains basic information about the app and makes it readable and executable from other apps such as Open PS2 Loader (OPL) and RetroLauncher.
+<h3>What makes a PSU 'SAS Compliant'?</h3>
+SAS is a new upcoming standard on the PS2 which aims to unify how apps work and interact with each other on the PS2. When we talk about a SAS Compliant PSU we mean a PSU which has the following:<ul>
+<li>A 'prefix' to denote what 'type' of Application is in the package. Example: `SYS` for System-Apps, `GME` for Games, `APP` for Standard executables.</li>
+<li>A 3D icon with it's type indicators which shows up in the OSDSYS (PS2's Browser) with separate Copy and Delete icons for the respective action.</li>
+<li>A `title.cfg` file which contains basic information about the app and makes it readable and executable from other apps such as Open PS2 Loader (OPL) and RetroLauncher.</li></ul>
 ...and more. <br>
 
 Now that we know what we are working with let us move on to the 
 
-### Prerequisites
-You'll need:
-- A MemoryCard with atleast 1MB free space
-- A way to launch LaunchELF/uLaunchELF/wLaunchELF
-- A USB drive formatted as FAT32 with atleast 2MB free space
-- A way to copy over the APP PSU downloaded from [SAS Apps Archive](https://ps2wiki.github.io/sas-apps-archive/)
-- Patience to follow the guide (Most important)
+<h3>Prerequisites</h3>
+You'll need:<ol>
+<li>A MemoryCard with atleast 1MB free space</li>
+<li>A way to launch LaunchELF/uLaunchELF/wLaunchELF</li>
+<li>A USB drive formatted as FAT32 with atleast 2MB free space</li>
+<li>A way to copy over the APP PSU downloaded from [SAS Apps Archive](https://ps2wiki.github.io/sas-apps-archive/)</li>
+<li>Patience to follow the guide (Most important)</li></ol>
 
-### Steps 
-#### Step 1: Open LaunchELF
+<h3>Steps</h3>
+<h4>Step 1: Open LaunchELF</h4>
 Once you are in LaunchELF, check the version to make sure the one you are using can extract PSUs.
 <div class="container">
     <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-1.png?raw=true">
@@ -46,7 +46,7 @@ Once you are in LaunchELF, check the version to make sure the one you are using 
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-2.png?raw=true">
 </div><br>
 
-#### Step 2: Find the PSU
+<h4>Step 2: Find the PSU</h4>
 Press 'Circle' to enterthe FileBrowser, then navigate to your FAT32 formatted USB 
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-3.png?raw=true">
@@ -63,7 +63,7 @@ Once you have highlighted the PSU(s) you want to install, Press 'R1' to bring up
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-6.png?raw=true">
 </div><br>
-#### Step 3: Installing
+<h4>Step 3: Installing</h4>
 Once you have successfully 'Copied' the file(s) (check the box on the right), we will now paste them.
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-7.png?raw=true">
@@ -88,7 +88,7 @@ Once the dialogue box disappears, the app should be installed on your MemoryCard
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-12.png?raw=true">
 </div><br>
 
-#### Step 4: Verification
+<h4>Step 4: Verification</h4>
 You can verify if everything is installed as expected. 
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-13.png?raw=true">
@@ -98,7 +98,7 @@ Now reboot your PS2 and naviagte to the 'Browser' and 'MemoryCard 1 or 2' (depen
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-14.png?raw=true">
 </div><br>
 
-#### Step 5: Rinse and Repeat!
+<h4>Step 5: Rinse and Repeat!</h4>
 Congratulations! Now that you have learned how to install SAS Compliant APP PSUs you are free to explore whatever apps you may come across. 
 <div class="container">
 <img style="border:2px solid #16537e" align="left | top" width="600" height="400" src="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/_posts/PS2-App-System/SAS/2024-12-13-how-to-install-app-psus/assets/2024-12-13-how-to-install-app-psus-15.png?raw=true">
